--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ body
 
 .translate
 {
-	background-image: linear-gradient(230deg, #020024 0%, #090979 50%, #00d4ff 110%);
+	background-image: linear-gradient(230deg, #020024 0%, #3d250b 50%, #e3e26a 110%);
 	border-radius: 20px;
 	font-size: 14px;
 	padding: 3px 10px;
@@ -528,7 +528,7 @@ ol > li > a > span
 #photoindex
 {
 	width:480px;
-	height: 380px;
+	height: 140px;
 	margin:5px;
 	z-index: 2;
 }
