--- a/style.css
+++ b/style.css
@@ -28,10 +28,11 @@ body
 	padding-top: 8px;
 	padding-bottom: 8px;
 	background-image: linear-gradient(230deg, #020024 0%, #090979 35%, #00d4ff 100%);
+	overflow: hidden;
 }
 .logodoppio
 {
-	font-size: 17.5px;
+	font-size: 15px;
 }
 
 #bold
@@ -43,8 +44,9 @@ body
 {
 	justify-content: center;
 	display: flex;
-	height: 200px;
+	height: 150px;
 	padding-left: -5%;
+	overflow: hidden;
 }
 
 .boxfooter
